Fix text overflowing issue in chat message

--- a/assets/src/App.css
+++ b/assets/src/App.css
@@ -27,6 +27,10 @@ body {
   resize: none;
 }
 
+.Text--markdown {
+  overflow-wrap: break-word;
+}
+
 .Text--markdown a {
   text-decoration: underline;
 }
